--- a/installer/dasa-twain-server-x86/Product.wxs
+++ b/installer/dasa-twain-server-x86/Product.wxs
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
+<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:u="http://schemas.microsoft.com/wix/UtilExtension">
 	<Product Id="*" Codepage="65001" Name="TWAIN Server" Language="1033" Version="1.0.0.0" Manufacturer="Diagnósticos da América S.A." UpgradeCode="2b6fca56-39b2-4c74-a87c-a69a3397538e">
 		<Package InstallerVersion="301" Compressed="yes" InstallScope="perMachine" />
 
@@ -11,17 +11,19 @@
 		<Feature Id="ProductFeature" Title="TWAIN Server" Level="1">
 			<ComponentGroupRef Id="ProductComponents" />
 		</Feature>
-        <Feature Id="VCRedist86" Title="Visual C++ 2017 x86 Runtime" AllowAdvertise="no" Display="hidden" Level="1">
+        <Feature Id="VCRedist86" Title="Visual C++ Runtime" Level="1">
             <MergeRef Id="VCRedistx86"/>
         </Feature>
-
-        <Property Id="ASSISTANCE_START_VIA_REGISTRY">1</Property>
-	</Product>
+        <Feature Id="TWAINDSM" Title="TWAIN DSM" Level="1">
+            <MergeRef Id="TWAINDSM"/>
+        </Feature>
+    </Product>
 
 	<Fragment>
 		<Directory Id="TARGETDIR" Name="SourceDir">
-            <Merge Id="VCRedistx86" SourceFile="src\Microsoft_VC141_CRT_x86.msm" DiskId="1" Language="0"/>
-			<Directory Id="ProgramFilesFolder">
+            <Merge Id="VCRedistx86" SourceFile="src\Microsoft_VC141_CRT_x86.msm" DiskId="1" Language="1033"/>
+            <Merge Id="TWAINDSM" SourceFile="src\TWAINDSM32.msm" DiskId="1" Language="1033"/>
+            <Directory Id="ProgramFilesFolder">
                 <Directory Id="CompanyFolder" Name="DASA">
                     <Directory Id="INSTALLFOLDER" Name="TWAIN Server" />
                 </Directory>
@@ -32,15 +34,24 @@
 	<Fragment>
 		<ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
             <Component Guid="0ee853ed-1c64-4904-9074-73948ffecf73">
-                <File Id="twain_server_x86" Source="src\twain-server.exe" Checksum="yes" KeyPath="yes" Vital="yes" />
+                <File Id="twain_server_x86" Name="twain-server.exe" Source="src\twain-server.exe" Checksum="yes" KeyPath="yes" Vital="yes" />
             </Component>
-            <Component Id="AssistanceAutoStart" Guid="e4f9fc32-f437-493d-9812-b3608be5f385">
-                <RegistryValue Root="HKMU" Action="write"
-                               Key="Software\Microsoft\Windows\CurrentVersion\Run"
-                               Name="TWAIN Server"
-                               Value="[INSTALLFOLDER]twain-server.exe"
-                               Type="string" />
-                <Condition>ASSISTANCE_START_VIA_REGISTRY</Condition>
+            <Component Guid="9446f16a-a5fb-48e9-a0dc-0ebf7981d6db">
+                <File Id="twain_server_watcher" Name="twain-server-watcher.exe" Source="src\twain-server-watcher.exe" Checksum="yes" KeyPath="yes" Vital="yes" />
+                <ServiceInstall Id="ServiceInstaller"
+                                Type="ownProcess"
+                                Name="TWAIN Server"
+                                DisplayName="TWAIN Server"
+                                Description="An application that exposes TWAIN DSM via HTTP to localhost."
+                                Start="auto"
+                                Vital="yes"
+                                ErrorControl="normal">
+                    <u:ServiceConfig FirstFailureActionType="restart"
+                                     SecondFailureActionType="restart"
+                                     ThirdFailureActionType="restart"
+                                     RestartServiceDelayInSeconds="3" />
+                </ServiceInstall>
+                <ServiceControl Id="StartService" Start="install" Stop="both" Remove="uninstall" Name="TWAIN Server" Wait="yes" />
             </Component>
         </ComponentGroup>
 	</Fragment>
